security: verify k6/ZAP benchmarks and enhance frontend UI

--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -1,10 +1,20 @@
 server {
     listen 80;
-    
+
+    # ==========================================
+    # 🛡️ DEVSECOPS KALKANLARI (OWASP ZAP İÇİN)
+    # ==========================================
+    server_tokens off;
+    add_header X-Frame-Options "SAMEORIGIN" always;
+    add_header X-Content-Type-Options "nosniff" always;
+    add_header X-XSS-Protection "1; mode=block" always;
+    add_header Content-Security-Policy "default-src 'self'; script-src 'self' 'unsafe-inline'; style-src 'self' 'unsafe-inline';" always;
+    # ==========================================
+
     location / {
         root /usr/share/nginx/html;
         index index.html index.htm;
-        # Mimarın Dokunuşu: Gelen her isteği React'in index.html'ine yönlendir
+        # React yönlendirmesi
         try_files $uri $uri/ /index.html;
     }
-}   
+}
