--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -7,6 +7,20 @@ http {
     server {
         # Nginx dış dünyayı standart web portu olan 80'den dinler.
         listen 80;
+            # 1. Nginx versiyonunu gizle (Server Leaks Version Çözümü)
+        server_tokens off;
+
+        # 2. Clickjacking Koruması (Sitemizi başka siteye gömemesinler)
+        add_header X-Frame-Options "SAMEORIGIN";
+
+        # 3. MIME Sniffing Koruması (Tarayıcı dosya türlerini tahmin etmesin)
+        add_header X-Content-Type-Options "nosniff";
+
+        # 4. Temel XSS Koruması (Tarayıcı seviyesinde kalkan)
+        add_header X-XSS-Protection "1; mode=block";
+        
+        # Not: CSP (Content Security Policy) ayarı React için biraz daha uzundur, 
+        # şimdilik en kritik olan bu 4 kalkanı devreye alıyoruz.
 
         # Kural 1: Eğer kullanıcı URL'nin sonuna /api/ yazarsa...
         location /api/ {
