--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -44,7 +44,15 @@ services:
       - "app-network"
     restart: always
 
-
+  redis:
+    image: redis:alpine
+    container_name: redis-cache
+    ports:
+      - "6379:6379"
+    networks:
+      - app-network
+    restart: always
+    
 volumes:
   mongo_data:
 
