--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -34,14 +34,14 @@ jobs:
         uses: docker/setup-buildx-action@v3
 
       - name: Build Backend Image
-        # Build işlemini doğrudan backend klasörünün içinde çalıştırıyoruz
         run: |
-          docker build -t sec-backend:latest ./backend
+          cd backend
+          docker build -t sec-backend:latest .
 
       - name: Build Frontend Image
-        # Build işlemini doğrudan frontend klasörünün içinde çalıştırıyoruz
         run: |
-          docker build -t react-frontend:latest ./frontend
+          cd frontend
+          docker build -t react-frontend:latest .
 
       - name: Run Unit Tests (Optional)
         run: |
